[project]
name = "sae-concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    #"causal-conv1d==1.6.0",
    #"einops>=0.8.1",
    #"mamba-ssm",
    "open-clip-torch>=2.31.0",
    "rich>=13.9.4",
    #"rope>=1.13.0",
    "tensorboard>=2.19.0",
    "timm==1.0.14",
    "torch-tb-profiler>=0.4.3",
    "torch>=2.6.0",
    #"standard-imghdr>=3.13.0",
    "transformers",
    #"cython>=3.0.12",
    "numpy>=2.2.3",
    #"pycocotools",
    "scipy>=1.15.2",
    "datasets>=3.5.0",
    #"mambavision",
    "scikit-learn>=1.6.1",
    "jupyterlab>=4.4.2",
]

[tool.uv.sources]
#mamba-ssm = { url = "https://github.com/state-spaces/mamba/releases/download/v2.2.4/mamba_ssm-2.2.4+cu12torch2.6cxx11abiFALSE-cp313-cp313-linux_x86_64.whl" }
transformers = { git = "https://github.com/huggingface/transformers" }
#pycocotools = { git = "https://github.com/cocodataset/cocoapi.git", subdirectory = "PythonAPI" }
#causal-conv1d = { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.5.0.post8/causal_conv1d-1.5.0.post8+cu12torch2.6cxx11abiFALSE-cp313-cp313-linux_x86_64.whl" }
#mambavision = { path = "../mamba/MambaVision" }
